--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 
-spring.datasource.url = jdbc:mysql://localhost:3306/bd_libreria
-spring.datasource.username = root
-spring.datasource.password = root
+##spring.datasource.url = jdbc:mysql://localhost:3306/bd_libreria
+##spring.datasource.username = root
+##spring.datasource.password = root
 
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-spring.jpa.hibernate.ddl-auto = create
-spring.jpa.show-sql = true
+##spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+##spring.jpa.hibernate.ddl-auto = create
+#spring.jpa.show-sql = true
 
-spring.jpa.properties.hibernate.format_sql = true
+#spring.jpa.properties.hibernate.format_sql = true
+
+spring.h2.console.enabled=true
